--- a/AK-Site/package.json
+++ b/AK-Site/package.json
@@ -29,5 +29,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
-  }
+  },
+  "areaServed": {
+  "@type": "Country", 
+  "name": "United Kingdom"
+}
 }
