--- a/james-burch-portfolio/package.json
+++ b/james-burch-portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "james-burch-portfolio",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,18 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "framer-motion": "^10.16.0",
     "@emailjs/browser": "^4.4.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.536.0",
-    "next": "15.4.5",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "lucide-react": "^0.263.1",
+    "next-themes": "^0.2.1",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5"
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0"
+  },
+  "description": "Modern portfolio showcasing full-stack development, Python/ML projects, and DevOps capabilities",
+  "keywords": [
+    "portfolio",
+    "nextjs",
+    "react",
+    "python",
+    "machine-learning",
+    "full-stack",
+    "devops",
+    "james-burch"
+  ],
+  "author": "James Burch",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/James-Burch/James-Burch-Portfolio.git"
   }
 }
