--- a/james-burch-portfolio/package.json
+++ b/james-burch-portfolio/package.json
@@ -6,36 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "framer-motion": "^10.16.0",
-    "@emailjs/browser": "^4.4.1",
-    "lucide-react": "^0.263.1",
-    "next-themes": "^0.2.1",
-    "clsx": "^2.0.0"
+    "next": "14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "framer-motion": "^11.3.8",
+    "emailjs-com": "^3.2.0",
+    "react-intersection-observer": "^9.13.0"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
-  },
-  "description": "Modern portfolio showcasing full-stack development, Python/ML projects, and DevOps capabilities",
-  "keywords": [
-    "portfolio",
-    "nextjs",
-    "react",
-    "python",
-    "machine-learning",
-    "full-stack",
-    "devops",
-    "james-burch"
-  ],
-  "author": "James Burch",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/James-Burch/James-Burch-Portfolio.git"
+    "@next/bundle-analyzer": "^14.2.5",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.5"
   }
 }
